--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   width: 100vw;
-  height: 100vh;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
